Update  tiller data.html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,31 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
     <script>
         const tillerData = [
-            [17.9211, 82.3322, "POTHURU SRINIVASA RAO - Marriwada"],
-            [18.0358, 82.5076, "KILAGADA SIMHACHALAM - Gadugupalle"],
-            [18.7667, 83.4167, "POLA VENKATA RATNAM - Pedbondepalli"],
-            [18.6, 83.5667, "KOLAKA DORABABU - Gorada"],
-            [18.75, 83.3, "MANTRABUDDI JAGADEESH - Santhoshapuram"],
-            [17.0, 82.25, "PENUMALLI ARUNA KUMARI - Ramanakkapeta"]
+    [17.6793, 82.2189, "POTHURU SRINIVASA RAO - Marriwada"],
+    [18.1897, 82.8706, "KILAGADA SIMHACHALAM - Gadugupalle"],
+    [18.7521, 83.3756, "POLA VENKATA RATNAM - Pedbondepalli"],
+    [18.6948, 83.6237, "YANDRRAPU SIVANAIDU - Pedbondepalli"],
+    [18.6496, 83.5030, "KOLAKA DORABABU - Gorada"],
+    [18.7521, 83.3756, "CHUKKA ADHINARAYANA - Pedbondepalli"],
+    [18.7650, 83.4000, "DASARI RAMOHAN RAO - Latchirajupet"],
+    [17.2031, 82.2425, "PENUMALLI ARUNA KUMARI - Ramanakkapeta"],
+    [18.7500, 83.3000, "MANTRABUDDI JAGADEESH - Santhoshapuram"],
+    [18.7262, 83.4707, "RUTTALA SUBBI NAIDU - Naguru"],
+    [18.8570, 83.5025, "SEEMALA SAAYIB - Nondrukona"],
+    [18.0136, 82.7752, "PAADI BALANNA - Dabbagaruvu"],
+    [18.0353, 82.7756, "KAMBIDI GNANA PRAKASH - Gochchari"],
+    [18.6496, 83.5030, "THOYAKA SINDI - Gorada"],
+    [18.0464, 82.7307, "PARAADANI TRINADH - Barapalle"],
+    [18.1182, 82.7400, "DHANASANI SIVARAMAKRISHNAM NAIDU - Chatraiputtu"],
+    [18.7521, 83.3756, "MUVVALA SIMHACHELAM - Pedabondepalle"],
+    [18.7521, 83.3756, "VANGAPANDU CHIRANJEEVULU - Pedabondapalle"],
+    [18.7500, 83.3000, "DATTI APPALANARSAMMA - Santhoshapuram"],
+    [18.1195, 82.7093, "VAMPURU APPALARAJU - Marriputtu"],
+    [18.4165, 83.9005, "RANDHI LAKSHMAN RAO - Alikam"],
+    [18.6522, 83.5260, "ALUJU SRIHARIRAO - Kimmi"]
+];
+
+            
             // Add remaining 24 tiller entries here
         ];
 
