--- a/index.html
+++ b/index.html
@@ -60,12 +60,34 @@
 ];
 
         const weederData = [
-            [17.75, 82.4, "MOTTADAM PAVANA LAXMI - Gondipakalu"],
-            [18.3, 83.7, "NAGIREDDY NAGABHUSHANA RAO - Viswanadhapuram"],
-            [18.7667, 83.4167, "YADRAPU SUGUNA KUMARI - Pedabondapalle"],
-            [18.7, 83.5, "GUNTREDDY VISHNU MURTHY - Kambara"],
-            [18.65, 83.3, "GOLLA SRINIVASARAO - Narasipuram"],
-            [18.8, 83.2, "PATTIKA JANARDANA - Kidigesu"]
+             [17.6793, 82.2189,  "MOTTADAM PAVANA LAXMI – Gondipakalu"],           // Gondipakalu, Chintapalle Mandal :contentReference[oaicite:1]{index=1}
+  [18.5691, 83.1319,  "NAGIREDDY NAGABHUSHANA RAO – Viswanadhapuram"],  // Viswanadhapuram, Parvathipuram Manyam :contentReference[oaicite:2]{index=2}
+  [18.7521, 83.3756,  "YADRAPU SUGUNA KUMARI – Pedabondapalle"],        // Pedabondapalle :contentReference[oaicite:3]{index=3}
+  [18.7521, 83.3756,  "PYLA CHELLAM NAIDU – Pedabondapalle"],           // Same village :contentReference[oaicite:4]{index=4}
+  [18.74496, 83.60447,"GUNTREDDY VISHNU MURTHY – Kambara"],            // Kambara (also Narasipuram area) :contentReference[oaicite:5]{index=5}
+  [18.74496, 83.60447,"GOLLA SRINIVASARAO – Narasipuram"],             // Same coords :contentReference[oaicite:6]{index=6}
+  [18.74496, 83.60447,"PATTIKA JANARDANA – Kidigesu"],                // Cluster region :contentReference[oaicite:7]{index=7}
+  [18.9760, 83.8968,  "DESAGIRI SIDDESWARA RAO – Burisinghi"],         // Burisinghi, near Srikakulam :contentReference[oaicite:8]{index=8}
+  [17.6203, 82.7158,  "KATTA VENKATA APPARAO – Seethanagaram"],         // Seethanagaram (East Godavari) :contentReference[oaicite:9]{index=9}
+  [18.113831,83.409348,"MANDANGI CHEKKAYYA – Jiyyammavalasa"], 
+            [18.0371, 82.5797,  "VOOYAKA SATISH – Chorupalle"],              // Sompuram result used for Chorupalle region :contentReference[oaicite:1]{index=1}
+  [18.4729, 83.2888,  "KONDAGIRI BALASINGHI – Busayavalasa"],       // Busayavalasa, Ramabhadrapuram mandal :contentReference[oaicite:2]{index=2}
+  [18.7119, 83.4930,  "PUVVALA PRAKASHA RAO – Santhoshapuram"],     // Santhoshapuram, Garugubilli mandal :contentReference[oaicite:3]{index=3}
+  [18.4969, 83.2787,  "GADI RAMINAIDU – Ramabhadrapuram"],          // Ramabhadrapuram HQ :contentReference[oaicite:4]{index=4}
+  [18.4622, 83.3143,  "ARIKA DAMANTHI – Arikatota"],               // Arikatota, Ramabhadrapuram mandal :contentReference[oaicite:5]{index=5}
+  [18.4622, 83.3143,  "ARIKA GANAPATHI – Arikatota"],              // Same coords
+  [18.4622, 83.3143,  "ARIKA SESHIREKHA – Arikatota"],             // Same coords
+  [16.4811, 80.6179,  "JANNI POLICE – Tadepalli (proxy)"],         // Proxy with Tadepalli, AP :contentReference[oaicite:6]{index=6}
+  [16.7160, 81.8958,  "BANKURU ESWARA RAO – Kothapeta"],            // Kothapeta, Godavari region :contentReference[oaicite:7]{index=7}
+  [18.3086, 83.5665,  "BUGATA ACHHAMMA – Cheepurupalli"],  
+            [18.5000, 83.2833, "DASARI TATABBABU – Garugubilli"],           // Approx using Garugubilli/Mandal HQ :contentReference[oaicite:1]{index=1}
+  [17.6708, 83.0852, "SUREDDY SRINIVASA RAO – Marrivalasa"],     // Marripalem proxy :contentReference[oaicite:2]{index=2}
+  [18.4622, 83.3143, "PATTIGULLA RAMU – Jannivalasa"],           // Jannivalasa same as Arikatota :contentReference[oaicite:3]{index=3}
+  [18.4622, 83.3143, "BEVARA LAXMANARAO – Mutcherlavalasa"],     // Mutcherlavalasa same cluster :contentReference[oaicite:4]{index=4}
+  [18.4729, 83.2888, "UMMIREDDY SIMHACHALAM – Busayavalasa"],    // As earlier batch :contentReference[oaicite:5]{index=5}
+  [18.5000, 83.2833, "ITLAMAMIDIPALLE – (Itlamamidipalle)"],      // Ramabhadrapuram mandal HQ coords :contentReference[oaicite:6]{index=6}
+  [18.5000, 83.2833, "JARNA – Jarna"],                           // Same mandal proxy :contentReference[oaicite:7]{index=7}
+  [18.5000, 83.2833, "DONGURUKIKKUVA – Dongurukikkuva"]
             // Add remaining 16 weeder entries here
         ];
 
